@@ -11,6 +11,9 @@ maxtime  = 2592000
 # Number of archive files per directory
 maxfiles = 5
 
+# directory with more config files to load; files names must end ending with ".conf"
+#configdir = /etc/metalog.d
+
 # Permissions for log directories. 0750 allows group to read logs. 0700 is default.
 #perms    = 0750
 
