@@ -43,6 +43,7 @@ static bool do_kernel_log = true;
 static signed char daemonize;
 static const char *pid_file = DEFAULT_PID_FILE;
 static const char *config_file = DEFAULT_CONFIG_FILE;
+static const char *config_dir = NULL;
 static const char *group_name = NULL;
 
 #endif
